k8s/docmost/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost
  namespace: default
  labels:
    app: docmost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost
  template:
    metadata:
      labels:
        app: docmost
    spec:
      containers:
        - name: docmost
          image: docmost/docmost:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: docmost-storage
              mountPath: /app/data/storage
      volumes:
        - name: docmost-storage
          persistentVolumeClaim:
            claimName: docmost-storage-pvc
