k8s/docmost/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: default
spec:
  selector:
    app: docmost
  ports:
    - name: http
      port: 3000
      targetPort: 3000
