k8s/docmost/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - docs.zmarzuqi.dev
      secretName: docmost-tls
  rules:
    - host: docs.zmarzuqi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 3000
